--- a/app/src/main/res/layout/activity_exo_player.xml
+++ b/app/src/main/res/layout/activity_exo_player.xml
@@ -25,6 +25,7 @@
             <!--/>-->
 
             <View
+                android:id="@+id/topview"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:background="#ba5a45" />
@@ -37,6 +38,7 @@
             </FrameLayout>
 
             <View
+                android:id="@+id/bottomview"
                 android:layout_width="match_parent"
                 android:layout_height="600dp"
                 android:background="#5845ba" />
