--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,12 @@
             android:layout_height="wrap_content"
             android:text="exoplayer"
             />
+        <Button
+            android:id="@+id/btnexoplayerfullscreenactivity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="exoplayer fullscreen activity"
+            />
 
         <FrameLayout
             android:id="@+id/frmVideo"
