--- a/player/src/main/res/layout/fragment_player.xml
+++ b/player/src/main/res/layout/fragment_player.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -128,4 +128,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</RelativeLayout>
