--- a/player/src/main/res/layout/fragment_player.xml
+++ b/player/src/main/res/layout/fragment_player.xml
@@ -87,15 +87,15 @@
 
                 <ImageView
                     android:id="@+id/player_ic_rewind"
-                    android:name="rewind"
+                    android:tag="rewind"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:src="@drawable/ic_rewind" />
 
                 <ImageView
-                    android:id="@+id/player_ic_playpuse"
-                    android:name="playpuse"
+                    android:id="@+id/player_ic_playpause"
+                    android:tag="playpause"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_weight="1"
@@ -103,7 +103,7 @@
 
                 <ImageView
                     android:id="@+id/player_ic_forward"
-                    android:name="forward"
+                    android:tag="forward"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_weight="1"
